aws-stack-cfn-demo4/aws-cfn-demo4.yml
Parameters:
  #InstanceType:
  #  Description: WebServer EC2 instance type
  #  Type: String
  #  Default: t2.micro
  #  AllowedValues: [t2.nano, t2.micro, t2.small, t3.small, t3.micro, t3.large]
  Env:
    Type: String
    Description: Select the appropriate environment
    AllowedValues:
      - Prod
      - Preprod
      - Dev
  KeyName:
      Description: ssh private key to connect to ec2
      Type: AWS::EC2::KeyPair::KeyName
      Default: cloud 
      ConstraintDescription: Must be a keyPair existing on AWS account     
  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-083654bd07b5da81d
    us-east-2:
      AMI: ami-0629230e074c580f2
  EnvTypeMap:
    Prod:
      InstanceType: t3.large
    Preprod:
      InstanceType: t3.small
    Dev:
      IntanceType: t2.micro  
Resources:
  VpcWebServer:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.10.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}-VPC-WebServer
  VpcWebServerPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties: 
       CidrBlock: 10.10.2.0/24
       AvailabilityZone: !Select [ 0, !GetAZs ]
       MapPublicIpOnLaunch: true 
       VpcId: 
         Ref: 'VpcWebServer'
       Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-Public-WebServer1
  VpcWebServerPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties: 
       CidrBlock: 10.10.3.0/24
       AvailabilityZone: !Select [ 1, !GetAZs ]
       MapPublicIpOnLaunch: true 
       VpcId: 
         Ref: 'VpcWebServer'
       Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-Public-WebServer2
  VpcWebServerPublicSubnet3:
    Type: AWS::EC2::Subnet
    Properties: 
       CidrBlock: 10.10.4.0/24
       AvailabilityZone: !Select [ 2, !GetAZs "" ]
       MapPublicIpOnLaunch: true 
       VpcId: 
         Ref: 'VpcWebServer'
       Tags:
       - Key: Name
         Value: !Sub ${AWS::StackName}-Public-WebServer3
  VpcDatabasePrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 3, !GetAZs "" ]
      VpcId: !Ref 'VpcWebServer'
      CidrBlock: 10.10.1.0/24
      Tags:
        - Key: WebServerPrivateServer
          Value: !Sub ${AWS::StackName}-Private-WebServer
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: VpcWebServer
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VpcWebServer
      InternetGatewayId: !Ref InternetGateway
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VpcWebServer
      Tags:
      - Key: Name
        Value: PublicRouteWebServer
  PublicRoute1:   # Public route table has direct routing to IGW:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway  
  SubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref VpcWebServerPublicSubnet1
  SubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref VpcWebServerPublicSubnet2
  SubnetCRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref VpcWebServerPublicSubnet3
  WebServer:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
       LaunchConfigurationName: WebServerLaunch-Config
       ImageId: 
        Fn::FindInMap:
        - RegionMap
        - !Ref AWS::Region
        - AMI
       KeyName: !Ref KeyName
       SecurityGroups:
        - !Ref WebSecurityGroup
       InstanceType:
        Fn::FindInMap:
        - EnvTypeMap
        - !Ref Env
        - InstanceType
  AutoScalingWebServer:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: WebServerAutoScale
      VPCZoneIdentifier:
        - !Ref VpcWebServerPublicSubnet1
        - !Ref VpcWebServerPublicSubnet2
        - !Ref VpcWebServerPublicSubnet3
      LaunchConfigurationName: !Ref 'WebServer'
      MinSize: '2'
      MaxSize: '3'
      LoadBalancerNames: [!Ref 'LoadBalancer']
      DesiredCapacity: "3"
  LoadBalancer:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Subnets:
        - !Ref VpcWebServerPublicSubnet1
        - !Ref VpcWebServerPublicSubnet2
        - !Ref VpcWebServerPublicSubnet3
      CrossZone: 'true'
      Listeners:
        - LoadBalancerPort: '80'
          InstancePort: '80'
          Protocol: HTTP
      HealthCheck:
        Target: HTTP:80/
        HealthyThreshold: '3'
        UnhealthyThreshold: '5'
        Interval: '30'
        Timeout: '5'
      SecurityGroups:
        - !GetAtt WebSecurityGroup.GroupId 
  DatabaseWebServer:
    Type: AWS::RDS::DBInstance
    Properties:
       AllocatedStorage: '5'
       DBInstanceClass: db.t3.micro
       DBName: KoukaDb
       MasterUsername: KoukaUser
       MasterUserPassword: KoukaPwd
       Engine: mysql
       EngineVersion: 5.7
       DBSubnetGroupName: !Ref DatabaseSubnetgroup 
       VPCSecurityGroups:
         - !Ref DatabaseSecurityGroup
       Tags:
         - Key: name
           Value: db-Webserver
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and http on Ec2 WebServer
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref 'SSHLocation'
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
      VpcId:
        Ref: VpcWebServer
  DatabaseSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Database instances security group"
      VpcId: !Ref VpcWebServer
      SecurityGroupIngress: 
        - IpProtocol: "tcp"
          FromPort: 3306
          ToPort: 3306
          CidrIp: 10.10.0.0/24
      SecurityGroupEgress: 
        - IpProtocol: "-1"
          CidrIp: 0.0.0.0/0
  DatabaseSubnetgroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription:  Private  Subnet for  RDS database
      SubnetIds:
        - !Ref VpcWebServerPublicSubnet1
        - !Ref VpcWebServerPublicSubnet2
        - !Ref VpcWebServerPublicSubnet3
        - !Ref VpcDatabasePrivateSubnet
    
Outputs:
  StackVPC:
    Description: The ID of the VPC
    Value: !Ref VpcWebServer
    Export:
      Name: !Sub "${AWS::StackName}-VPCID"
